--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -62,3 +62,56 @@ body{
 .el-pagination__jump .el-input__inner{
   padding: 0 3px !important;
 }
+
+/* 分类BOX */
+.topBox{
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
+.HotList{
+  margin:0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+}
+.CatHotBox{
+  flex: 1;
+  width: 20px;
+  height: 20px;
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+}
+.HotList li{
+  margin: 0 5px;
+  padding-right: 10px;
+  cursor: pointer;
+  font-size: 14px;
+}
+.HotList li:hover{
+  color: rgb(151, 154, 156);
+}
+.fontcolor{
+  color: #f72800;
+}
+.typeall{
+  margin-left: 20px;
+  background: #e4e4e4;
+  padding: 7px 10px;
+  color: #212933;
+  font-size: 12px;
+  border-radius: 3px;
+  transition: all .4s;
+  cursor: pointer;
+}
+.seachtype{
+  display: flex;
+  margin-right: 20px;
+}
+.type_select{
+  color: white;
+  background-color: #f72800;
+}
